# activemq-artemis

./: .RELEASING.md.swo  .RELEASING.md.swp  .asf.yaml  .gitignore  .project  .travis.yml  CMakeLists.txt  LICENSE  LargeStreamletTest  NOTICE  README.md  RELEASING.adoc  RELEASING.md  activemq_doap.rdf  artemis_doap.rdf  hornetq_doap.rdf  mvnw  pom.xml
.github/: dependabot.yml  maven-settings.xml
.github/workflows/: build.yml
activemq-boot/: pom.xml
activemq-bootstrap/: pom.xml
activemq-commons/: pom.xml
activemq-core-client/: pom.xml
activemq-dto/: pom.xml
activemq-jms-client/: pom.xml
activemq-jms-server/: pom.xml
activemq-journal/: pom.xml
activemq-maven-plugin/: pom.xml
activemq-native/: README  compile-native.sh  pom.xml
activemq-protocols/: pom.xml
activemq-protocols/activemq-amqp-protocol/: pom.xml
activemq-protocols/activemq-openwire-protocol/: pom.xml
activemq-protocols/activemq-proton-plug/: pom.xml
activemq-protocols/activemq-stomp-protocol/: pom.xml
activemq-ra/: pom.xml
activemq-rest/: pom.xml
activemq-selector/: pom.xml
activemq-server/: pom.xml
activemq-service-extensions/: pom.xml
activemq-service-sar/: pom.xml
activemq-tools/: pom.xml
activemq-web/: pom.xml
activemq-website/: pom.xml
activemq6-core-client/: pom.xml
activemq6-dto/: pom.xml
activemq6-jms-client/: pom.xml
activemq6-jms-server/: pom.xml
activemq6-journal/: pom.xml
activemq6-native/: README  pom.xml
activemq6-protocols/activemq6-openwire-protocol/: pom.xml
activemq6-protocols/activemq6-proton-plug/: pom.xml
activemq6-protocols/activemq6-stomp-protocol/: pom.xml
activemq6-rest/: pom.xml
activemq6-selector/: pom.xml
activemq6-server/: pom.xml
activemq6-tools/: pom.xml
artemis-bom/: pom.xml
artemis-boot/: pom.xml
artemis-bootstrap/: pom.xml
artemis-cdi-client/: pom.xml
artemis-cdi-jakarta-client/: pom.xml
artemis-cli/: pom.xml
artemis-commons/: pom.xml
artemis-console/: pom.xml
artemis-core-client/: pom.xml
artemis-core-client-all/: pom.xml
artemis-core-client-osgi/: pom.xml
artemis-distribution/: pom.xml
artemis-docker/: Dockerfile-adoptopenjdk-11  Dockerfile-alpine  Dockerfile-alpine-11-jre  Dockerfile-alpine-17  Dockerfile-alpine-21  Dockerfile-alpine-21-jre  Dockerfile-alpine-build  Dockerfile-build  Dockerfile-centos  Dockerfile-centos7-11  Dockerfile-centos7-11-build  Dockerfile-centos7-17  Dockerfile-debian  Dockerfile-eclipse-temurin-11  Dockerfile-ubuntu  Dockerfile-ubuntu-11  Dockerfile-ubuntu-11-build  Dockerfile-ubuntu-11-jre-build  Dockerfile-ubuntu-21  Dockerfile-ubuntu-21-jre  docker-compose-final.yml  docker-compose.yml  docker-run.sh  prepare-docker.sh  readme.adoc  readme.md
artemis-dto/: pom.xml
artemis-features/: pom.xml
artemis-hawtio/: pom.xml
artemis-hawtio/activemq-branding/: pom.xml
artemis-hawtio/artemis-console/: pom.xml
artemis-hawtio/artemis-plugin/: README.md  pom.xml
artemis-image/: README.md  TODO.md  pom.xml
artemis-image/examples/: README.md  pom.xml
artemis-jakarta-cdi-client/: pom.xml
artemis-jakarta-client/: pom.xml
artemis-jakarta-client-all/: pom.xml
artemis-jakarta-client-osgi/: pom.xml
artemis-jakarta-ra/: pom.xml
artemis-jakarta-ra-rar/: pom.xml
artemis-jakarta-server/: pom.xml
artemis-jakarta-service-extensions/: pom.xml
artemis-jdbc-store/: pom.xml
artemis-jms-client/: pom.xml
artemis-jms-client-all/: pom.xml
artemis-jms-client-osgi/: pom.xml
artemis-jms-server/: pom.xml
artemis-journal/: pom.xml
artemis-junit/: pom.xml
artemis-junit-all/: pom.xml
artemis-junit-extensions/: pom.xml
artemis-junit/artemis-junit-4/: pom.xml
artemis-junit/artemis-junit-5/: pom.xml
artemis-junit/artemis-junit-commons/: pom.xml
artemis-lockmanager/: pom.xml
artemis-lockmanager/artemis-lockmanager-api/: pom.xml
artemis-lockmanager/artemis-lockmanager-ri/: pom.xml
artemis-log-annotation-processor/: pom.xml
artemis-log-annotation-processor/tests/: pom.xml
artemis-maven-plugin/: pom.xml
artemis-native/: CMakeLists.txt  README  README.md  compile-native.sh  pom.xml
artemis-native/src/main/c/: AIOController.cpp  AIOController.h  AsyncFile.cpp  AsyncFile.h  CMakeLists.txt  JAIODatatypes.h  JNICallbackAdapter.cpp  JNICallbackAdapter.h  JNI_AsynchronousFileImpl.cpp  JavaUtilities.cpp  Version.h  exception_helper.h  org_apache_activemq_artemis_jlibaio_LibaioContext.c
artemis-pom/: pom.xml
artemis-protocols/: pom.xml
artemis-protocols/artemis-amqp-protocol/: pom.xml
artemis-protocols/artemis-hornetq-protocol/: pom.xml
artemis-protocols/artemis-hqclient-protocol/: pom.xml
artemis-protocols/artemis-mqtt-protocol/: pom.xml
artemis-quorum-api/: pom.xml
artemis-quorum-ri/: pom.xml
artemis-ra/: pom.xml
artemis-ra-rar/: pom.xml
artemis-rest/: pom.xml
artemis-selector/: pom.xml
artemis-server/: pom.xml
artemis-server-osgi/: pom.xml
artemis-service-extensions/: pom.xml
artemis-tools/: pom.xml
artemis-unit-test-support/: pom.xml
artemis-web/: pom.xml
artemis-website/: npm-shrinkwrap.json  package-lock.json  package.json  pom.xml
distribution/: pom.xml
docs/: README.html  README.md  pom.xml
etc/: checkstyle-suppressions.xml  checkstyle.xml  findbugs-exclude.xml  license-header.txt  org.eclipse.jdt.core.prefs  org.eclipse.jdt.ui.prefs
examples/: README.md  pom.xml
hornetq-bootstrap/: pom.xml
hornetq-commons/: pom.xml
hornetq-core-client/: pom.xml
hornetq-dto/: pom.xml
hornetq-jms-client/: pom.xml
hornetq-jms-server/: pom.xml
hornetq-journal/: pom.xml
hornetq-native/: pom.xml
hornetq-protocols/: pom.xml
hornetq-ra/: pom.xml
hornetq-rest/: pom.xml
hornetq-selector/: pom.xml
hornetq-server/: pom.xml
hornetq-service-sar/: pom.xml
hornetq-tools/: pom.xml
scripts/: README  checkout-PR.sh  cherry-pick-report.sh  download-release.sh  install-etcd.sh  jacoco.sh  merge-PR.sh  merge-branch.sh  one-test.sh  print-data.sh  rebase-donation.sh  rebuild-snapshot.sh  release-docker.sh  replace-wildfly.sh
tests/: pom.xml
(+17992 files in other folders)
